--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description              : "Law student interested in tech and law. Searching fo
 url                      : "http://baarbe.ca"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/img/baarbe.jpg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+teaser                   : "/assets/img/Madrid Sun.jpg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs            : false #false (default)
 words_per_minute         : 200
 #comments:
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Jeremiah Baarbe"
   avatar           : "/assets/img/baarbe.jpg"
-  bio              : "I am an amazing person."
+  bio              : "I'm a law student and nerd. This is my travel blog!"
   location         : "Ottawa, ON"
   email            :
   uri              :
@@ -89,18 +89,18 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "/github/"
+  github           : "/baarbeh/"
   google_plus      :
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : "/linkedin/"
+  linkedin         : "/jeremiahbaarbe/"
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
   steam            :
   tumblr           :
-  twitter          : /twitter/
+  twitter          : /@baarbeh/
   vine             :
   weibo            :
   xing             :
