Changed Site Name

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Jeremiah Baarbe | JD Candidate, 2018"
-title_separator          : "-"
+title                    : "Jeremiah Baarbe"
+title_separator          : "―"
 name                     : "Jeremiah Baarbe"
 description              : "Law student interested in tech and law. Searching for articling positions for Summer, 2018"
 url                      : "http://baarbe.ca"
