--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ title_separator: "―"
 name: Jeremiah Baarbe
 description: Law student interested in tech and law. Searching for articling positions
   for Summer, 2018
-url: http://baarbe.ca
+url: https://baarbe.ca
 baseurl: 
 repository: 
 teaser: "/assets/img/Madrid Sun.jpg"
